--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,9 @@ body {
   background-color: #f5f5f5;
   font-family: "Open Sans",sans-serif;
   margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 * {
@@ -18,6 +21,7 @@ body {
   padding: 0 10px;
   border: 10px solid white;
   box-shadow: 1px 3px 5px rgba(117, 157, 158, 0.2);
+  margin-bottom: 10px;
 }
 
 .hamburger {
@@ -27,6 +31,7 @@ body {
   height: 30px;
   justify-content: space-around;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .hamburger div {
@@ -67,8 +72,10 @@ body {
 }
 
 .container {
-  width: 330px;
-  margin: 30px auto;
+  min-width: 330px;
+  width: 98%;
+  margin: auto;
+
 }
 
 a {
@@ -77,18 +84,19 @@ a {
 }
 
 .news-type {
-  padding: 1px;
   border: 3px solid #fff;
+  margin-bottom: 10px;
   }
 
-.news-type:hover {
+.type {
+  margin: 12px;
+  font-size: 12px;
+  display: block;
+}
+
+.type:hover {
   color:  pink;
-  }
-
- .news-type .type {
-   margin-left: 10px;
-   font-size: 12px;
- }
+}
 
 .footer {
   display: flex;
@@ -112,13 +120,12 @@ a {
 
 .big-news .news-card {
   width: 100%;
-  height: 450px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .other-news .news-card {
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .polaroid {
@@ -151,7 +158,7 @@ a {
 @media (min-width: 768px) {
 
   .container {
-    width: 768px;
+    min-width: 768px;
   }
 
   .hamburger {
@@ -175,7 +182,6 @@ a {
   
   .big-news .news-card {
     width: 100%;
-    height: 650px;
   }
 
   .other-news {
@@ -185,7 +191,7 @@ a {
   }
 
   .other-news .news-card {
-    width: 45%;
+    width: 49.5%;
   }
 }
   /** LAPTOP **/
@@ -193,7 +199,7 @@ a {
 @media (min-width: 992px) {
 
   .container {
-    width: 992px;
+    min-width: 992px;
   }
 
   .big-news .news-card {
@@ -208,10 +214,6 @@ a {
   .big-news .news-card .polaroid .news-card-pic {
     width: 50%;
     margin-right: 20px;
-  }
-
-  .big-news .news-card {
-    height: 350px;
   }
 
     .other-news .news-card {
