--- a/code/style.css
+++ b/code/style.css
@@ -1,50 +1,50 @@
 html {
-    background: rgb(134, 128, 128)
-    color:black;
+  background: rgb(134, 128, 128)
+  color:black;
 }
 
 body {
-  margin:0px;
+  margin:0;
   border-bottom: solid 5px rgb(46, 7, 7);
 }
 
 /***HEADER SECTION***/
 
-  .header1 {
-    display:flex;
-    justify-content:center;
-    align-items: center;
-    background-color:white;
-    padding: 0 10px; 
-    size: 50%;
-    border-bottom: solid 5px rgb(46, 7, 7);
-  }
+.header1 {
+  display:flex;
+  justify-content:center;
+  align-items: center;
+  background-color:white;
+  padding: 0 10px; 
+  size: 50%;
+  border-bottom: solid 5px rgb(46, 7, 7);
+}
 
-  .logo-pic {
-    border: 1px solid;
-    width:50px;
-    margin-left: 10px;
-    margin-right: 4px;
-  }
+.logo-pic {
+  border: 1px solid;
+  width:50px;
+  margin-left: 10px;
+  margin-right: 4px;
+}
 
-  .qtimes {
+.qtimes {
     margin-left: 2px;
     margin-right: 5px;
-  }
+}
 
-  .hamburger {
+.hamburger {
     display: flex;
     width: 50px;
     height: 30px;
     flex-direction: column;
     justify-content: space-between;
-  }  
+}  
   
-  .hamburger div {
+.hamburger div {
     width: 30px;
     height: 5px;
     background: black;
-  }
+}
 
 nav {
 display:none;
@@ -77,7 +77,7 @@ h6 {
 }
 
 .big-news-section div {
-  padding-bottom: 20px;;
+  padding-bottom: 20px;
 }
 
 /*** OTHER NEWS SECTION ***/
@@ -103,85 +103,83 @@ flex-direction: column;
 
 @media (min-width: 668px) {
   
-  /***HEADER SECTION***/
+/***HEADER SECTION***/
 
-  .header1 {
-    justify-content:flex-start;
-  }
+.header1 {
+  justify-content:flex-start;
+}
 
-    .hamburger {
-      display: none;
-  }
+.hamburger {
+  display: none;
+}
   
-  nav {
-    display: inline-block;
-  }
+nav {
+  display: inline-block;
+}
 
-  /***BIG NEWS SECTION***/
+/***BIG NEWS SECTION***/
 
-  .big-news-section img {
-    margin: 20px 40px 5px 40px;
-    max-width: 80%;
-  }
+.big-news-section img {
+  margin: 20px 40px 5px 40px;
+  max-width: 80%;
+}
 
-  .big-news-section div {
-    text-align: center;
-    padding: 0px 10px 15px 10px;
-    margin-bottom: 20px;
-    border-bottom: none;
-  }
+.big-news-section div {
+  text-align: center;
+  padding: 0 10px 15px 10px;
+  margin-bottom: 20px;
+  border-bottom: none;
+}
 
-  /*** OTHER NEWS SECTION ***/
+/*** OTHER NEWS SECTION ***/
 
-  .other-news-section {
+.other-news-section {
   flex-wrap: wrap;  
   flex-direction: row;
   justify-content: space-around;
-  }
+}
 
 .other-news {
   width:40%;
-  margin: 0px 10px;
+  margin: 0 10px;
   border-bottom:none;
-  }
+}
 
 .news-text {
   text-align: center;
   padding-bottom: 20px;
-  } 
+} 
 }
 
-  @media (min-width: 950px) {
+@media (min-width: 950px) {
 
-   /***BIG NEWS SECTION***/
+  /***BIG NEWS SECTION***/
 
 .big-news-section {
   flex-direction: row;
   align-items: center;
   margin: 20px 15px 30px 15px;
   padding-bottom: 40px;
-  }
+}
 
 .big-news-section img {
   width: 40%;
-  }
+}
 
 .big-news-section div{
-  padding:0px 30px 0px 0px;
+  padding:0 30px 0 0;
+}
+/*** OTHER NEWS SECTION ***/
+
+.other-news-section {
+  flex-wrap: wrap;  
+  flex-direction: row;
+}
+
+.other-news {
   border-bottom:none;
-  
-  }
-    /*** OTHER NEWS SECTION ***/
-
-    .other-news-section {
-      flex-wrap: wrap;  
-      flex-direction: row;
-  }
-
-    .other-news {
-      border-bottom:none;
-      width:20%;
-    }
+  width:20%;
+}
 }
 
 
