--- a/code/style.css
+++ b/code/style.css
@@ -4,6 +4,7 @@ body{
   margin: 0;
   font-family: 'Maven Pro', sans-serif;
 }
+
 /*******DEFAULT SETTING*****/
 button{
   padding: 10px; 
@@ -14,25 +15,29 @@ button{
   transition: all 0.20s; /*makes the a smooth "alower" effect on hover*/
     }
 
-nav button:hover{
+nav a:hover{
   color:#DDDDDD;
   border-color:#DDDDDD;
   }
 
-
-  button:hover{
+button:hover{
   color:#DDDDDD;
   border-color:#DDDDDD;
-    }
+  }
 
-a{
+nav a{
   text-decoration: none;
-  color:black;
+  padding: 10px;
+  margin:10px; 
+  border:0.16em solid #002e63;
+  background:#002e63;
+  color:white;
+  text-align:center;
+  transition: all 0.20s; /*makes the a smooth "alower" effect on hover*/
 }
 
-
 /****** NAV BAR********/
-nav{
+.navigation{
   display: flex; 
   padding: 10px 15px;
   justify-content: space-between;
@@ -48,11 +53,11 @@ nav{
   margin: 6px 0;
   }
 
-nav a{
+/* nav a{
   padding: 10px; 
   text-decoration: none;
   color: #312c2c;
-}
+} */
 
 .right-nav {
   display: none; 
@@ -65,27 +70,24 @@ nav a{
 }
 
 /********************* BIG NEWS************/
-
-
 .big-news{
-display: flex;
-flex-direction: column-reverse;
-align-items: flex-start;
-justify-content: center;
-margin: 5px;
-height: 500px;
-margin: 3%;
-
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 5px;
+  height: 500px;
+  margin: 3%;
 }
-
 
 .big-news img{
   display: flex;
   overflow: hidden;
+  object-fit: cover;
   width: 100%;
   height: 100%;
-
 }
+
 .head-line
 {
   display: flex;
@@ -98,7 +100,6 @@ margin: 3%;
   margin-bottom: 80px;
   margin-left: 30px;
 }
-
 
 /*****************OTHER NEWS*************/
 
@@ -114,7 +115,8 @@ margin: 3%;
 }
 
 /***zigzag background****/
-  .other-news{
+
+.other-news{
   background:linear-gradient(-135deg, #a7d8de  10px, transparent 0) 0 10px,linear-gradient(135deg, #a7d8de  10px, #fff 0) 0 10px;
   background-color: #a7d8de ;
   background-position: left bottom;
@@ -127,6 +129,7 @@ margin: 3%;
   margin:6%;
   font-size: 12px;
 } 
+
 .large-box
 {
   display: flex;
@@ -146,9 +149,9 @@ margin: 3%;
   margin-top: 60px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
+
 .small-box img{
   width: 100%;
-
 }
 
 /*****************SMALL NEWS*************/
@@ -160,6 +163,11 @@ margin: 3%;
   margin: 3%;
   height: fit-content;
 }
+
+.text a {
+    text-decoration: none;
+    color: black;
+  }
 
 .small-news-heading h2{
   margin-left: 3%;
@@ -184,7 +192,6 @@ margin: 3%;
   flex-direction: column;
 }
 
-
 .minihead-line h3 
 {
   text-align: center;
@@ -200,6 +207,7 @@ margin: 3%;
 .our-work h2{
   margin:3%;
 }
+
 .about-one{
 
   display: grid; 
@@ -210,6 +218,7 @@ margin: 3%;
   height: 500px;
   
 }
+
 .about-two{
   display: grid; 
   grid-template-columns: repeat(1fr);
@@ -236,7 +245,6 @@ margin: 3%;
   align-self: center;
 }
 
-
 .about-one div img{
   width: 100%;
   height: 100%;
@@ -244,13 +252,14 @@ margin: 3%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
 }
+
 .about-two div img{
   width: 100%;
   height: 100%;
   border-radius: 50%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  
 }
+
 .projects {
   justify-self: center;
   position: relative;
@@ -260,7 +269,6 @@ margin: 3%;
   cursor: pointer;
   overflow: hidden;
 }
-
 .over{
   opacity: 0;
   font-size: 25px;
@@ -280,7 +288,7 @@ margin: 3%;
   text-align: center;
 }
 
-.projects .over:hover {
+.projects .over:hover{
   opacity: 1;
 }
 
@@ -290,7 +298,6 @@ margin: 3%;
   transition-delay: 0s;
   transition-duration: 0.4s;
 }
-
 
 footer{
   display: flex; 
@@ -303,7 +310,6 @@ footer{
   margin: 3%;
   cursor: pointer;
 }
-
  
 /*****For ipad with screens between 650 and 1024px******/
 @media (min-width: 660px) and (max-width:1024px)
@@ -313,13 +319,11 @@ footer{
     justify-content: space-between;
   }
 
-  .other-news-boxes
-  {
+  .other-news-boxes{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100%;
-
   }
   
   .other-news-text{
@@ -333,8 +337,7 @@ footer{
     font-size: 20px;
   }
   
-  .small-news
-  {
+  .small-news{
     display: grid; 
     grid-template-columns: repeat(2, 1fr); 
     grid-gap: 40px;
@@ -364,9 +367,6 @@ footer{
     padding-bottom: 70px;
     margin-bottom: 50px;
   }
-  
-  
-  
 }
 
 /*****For desktop with screens 1025px and larger******/
@@ -410,8 +410,7 @@ footer{
   }
 
 
-  .small-news
-  { 
+  .small-news{ 
     display: grid; 
     grid-template-columns: repeat(3, 1fr); 
     grid-gap: 40px;
