deleted Marquee element

--- a/code/style.css
+++ b/code/style.css
@@ -25,6 +25,7 @@ h1 {
 .banner {
   background-color: #24292d;
   padding: 6px;
+  text-align: center;
 }
 
 .banner a {
@@ -34,10 +35,11 @@ h1 {
   letter-spacing: 3px;
   text-decoration: none;
   text-transform: uppercase;
+  
 }
 
 .banner a:hover {
-  color: #FF13A7;
+  color: #FF13A7;`
 }
 
 .navigation-bar {
