--- a/code/style.css
+++ b/code/style.css
@@ -21,7 +21,7 @@ p {
 }
 
 .container {
-  width: 320px;
+  width: 100%;
   margin: 25px auto;
 }
 
@@ -108,6 +108,10 @@ p {
   width: 80%;
 }
 
+.tagline {
+  font-style: italic;
+}
+
 /* POEM NEWS SECTION */
 
 .poem-news .container {
@@ -160,13 +164,10 @@ p {
 .poem-card:hover {
   -webkit-transform: scale(1.25, 1.25);
   transform: scale(1.25, 1.25);
+  z-index: 2;
 }
 
-/* Fade in the pseudo-element with the bigger shadow */
-.poem-card:hover::after {
-  opacity: 1;
-}
-
+/* Sets the background color for the first poem card in the article */
 .poem-card:nth-child(1){
   background: #b53056;
   color: #fff;
