--- a/code/style.css
+++ b/code/style.css
@@ -9,33 +9,25 @@ body {
   border: 4px solid #FFE401;
   background-color: #FFE401;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 1200px;
+  align-items: flex-end; 
+  justify-content: center; 
   margin-left: auto;
   margin-right: auto;
 }
   
 .flex-child {
   margin: 5px;
-
   border-radius: 5px;
   padding: 5px;
   display: flex;
 }
   
 img {
-  width: 100px;
-  height: 100px;
-  align-items: flex-end;
+  width: 100px; 
+  height: 100px; 
+  align-items: flex-start;
 }
 
-.white {
-  width: 50%;
-}
-  
-/*---Flex container => Navbar starts here---*/
-  
 ul {
   list-style-type: none;
   margin: 0;
@@ -46,6 +38,7 @@ ul {
   
 li {
   float: left;
+  font-size: 24px;
 }
   
 li a {
@@ -61,23 +54,13 @@ li a:hover {
   border-radius: 25px;
 }
   
-/*---Flex container => Navbar ends here---*/
-  
-a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
-  width: 112px;
-  height: 50px;
-  font-size: 28px;
-  padding:28px 16px 0 16px ;
-  font-weight: bold;
-}
-
 /*---DROPDOWN starts here---*/
   
 .dropbtn {
   background-color: #FFE401;
   color: black;
   padding: 16px;
-  font-size: 76px;
+  font-size: 24px;
   border: none;
   cursor: pointer;
 }
@@ -91,19 +74,17 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   display: none;
   position:absolute; 
   background-color: #c9bb40; 
-  width: 432px;
-  height: 600px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
   
 .dropdown-content a {
   color: black;
-  margin: 50px;
-  padding: 12px 16px;
+  margin: 50px; 
+  padding: 12px 16px; 
   text-decoration: none;
   display: block;
-  font-size: 76px;
+  font-size: 30px; 
   font-weight: bold;
 }
   
@@ -137,11 +118,7 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 .big-news {
   border: 4px solid white;
   border-bottom: 4px solid #212529;
-  height: 330px;
   display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   background-color: white; 
@@ -162,14 +139,10 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 }
   
 .inside-big img {
-  width: 510px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
   border-radius: 25px;
   box-shadow: 10px 5px 5px  #212529;
-}
-  
-.pic {
-  width: 45%;
 }
   
 .text1 {
@@ -183,8 +156,6 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 /*---Big News => Figure class starts here---*/
 
 .figure {
-  width: 1200px;
-  height: 300px;
   display: flex;
   justify-content: center;
 }
@@ -200,7 +171,6 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   color: black;
   padding: 2px;
   text-align:left;
-  font-size: 40px;
 } 
 
 /*---Big News => Figure class ends here---*/
@@ -214,7 +184,6 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 .latest { 
   border: 4px solid white;
   border-bottom: 4px solid #212529;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
@@ -227,19 +196,15 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   animation-iteration-count: infinite;
   animation-direction: alternate;
   display: inline; /* Important */
-  /*background-color: #FFE401; */
   justify-content:last baseline;
   align-items: flex-end;
-  border-radius: 25px;
 }
   
 /*---Animation starts here---*/
 @keyframes latest {
   0%   { left:0px; top:0px;}
-  20%  { left:200px; top:0px;}
-  40%  { left:500px; top:0px;}
-  60%  { left:800px; top:0px;}
-  100%  { left:1000px; top:0px;}
+  50%  { left:50%; top:0px;}
+  90%  { left:90%; top:0px;}
 }
 /*---Animation ends here---*/
 
@@ -250,12 +215,10 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 /*------ OTHER NEWS SECTION starts ------*/
 .other-news {
   border: 4px solid white;
-  height: 500px;
   display: grid; 
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 5px;
   flex-wrap: wrap;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   background-color: white;
@@ -303,7 +266,6 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 
 .news-article img {
   display: block;
-  width: 250px;
 }
 .news-article a:hover {
   -webkit-transform: scale(1.2);
@@ -320,14 +282,14 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 
 .news-article {
   position: relative;
-  width: 50%; 
+  width: 100%; 
 }
   
 .image {
   display: block;
   width: 100%;
-  height: 180px;
-} 
+  height: 100%; 
+}   
   
 .overlay {
   position: absolute;
@@ -372,7 +334,6 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 5px;
   flex-wrap: wrap;
-  width: 1200px;
   margin-left: auto;
   margin-right: auto;
   background-color: rgb(184, 179, 179);
@@ -410,37 +371,16 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 }
 
 
-/* Small Desktop */
-@media (min-width: 992px) and (max-width: 1024px)  {
-  .text2 {
-    display: none;
-  } 
-    
-  .unsorted-list-tablet {
-    display: none;
-  }
-    
-  .dropdown { 
-    display: none;
-  } 
-
-  .figure {
-    display: none;
-  } 
-
-}
-
-
+/*****************************************/
 /* Tablet */
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 1024px) { /* 992 */
   .flex-container {
     justify-content: center;
   }
 
   a.home-tablet, .politics1, .sport, .culture {
-    font-size: 50px;
-    width: 155px;
-    height: 60px;
+    font-size: 28px; 
+    font-weight: bold;
   }
 
   .home-desktop, .politics {
@@ -454,28 +394,44 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   .white {
     display: flex;
     justify-content: center;
-    width: 35%;
+    width: 35%; 
     align-items: center;
   }
 
+  .inside-big img {
+    width: 100%; 
+    height: 100%;  
+    border-radius: 25px;
+    box-shadow: 10px 5px 5px  #212529;
+  }
+
   .white img {
-    width: 150px;
-    height: 150px;
+    width: 100%; 
+    height: 100%;  
+  } 
+
+  @keyframes latest {
+    0%   { left:0px; top:0px;}
+    50%  { left:40%; top:0px;}
+    100%  { left:80%; top:0px;}
   }
 
   .other-news {
-    display: flex;
-    height: 1050px;
+    height: 100%; 
+    grid-template-columns: 1fr 1fr;
+    
+    
   }
+
   .news-article {
     display: flex;
-    width: 49%;
+    width: 100%; 
     justify-content: center;
+    align-items: center;
   }
 
   .news-article img {
-    width: 550px;
-    height: 200px;
+    width: 100%;
   }
 
   .figure {
@@ -483,11 +439,11 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   } 
 
   .text {
-    font-size: 30px;
+    font-size: 16PX;
   }
 
   .text1 {
-    font-size: 24px;
+    font-size: 20px; 
   }
 
   .rights {
@@ -502,39 +458,33 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   
 }
 
-
+/************************************************/
   /* Mobile Device */
 @media (max-width: 767px) {
   .latest {
-    height:75px;
+    height:20px;
   }
 
   .latest h1 {
-    font-size: 62px;
+    font-size: 12px;
   }
 
   @keyframes latest {
     0%   { left:0px; top:0px;}
-    50%  { left:400px; top:0px;}
-    100%  { left:750px; top:0px;}
+    50%  { left:45%; top:0px;} 
+    100%  { left:85%; top:0px;} 
   }
     
   .figure {
-    width: 1200px;
-    height: 600px;
     display: flex;
     justify-content: center;
   }
 
   .figure img {
-    width: 1200px;
-    height: 470px;
+    width: 100%; 
+    height: 100%;
+    
     border-radius: 25px;
-  }
-
-  figcaption {
-    width: 1200px;
-    height: 100px;
   }
     
   body {
@@ -551,13 +501,8 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   }
 
   .dropdown .dropbtn img {
-    width: 400px;
-    height: 400px;
-  }
-  
-  .big-news {
-    height: 600px;
-    width: 1200px;
+    width: 80%;
+    height: 80%;
   }
 
   .inside-big {
@@ -570,7 +515,8 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
 
   .flex-container {
     justify-content: center;
-    height: 450px;
+    align-items: center;
+    height: 100%; 
   }
 
   .unsorted-list-tablet, .unsorted-list-desktop {
@@ -578,21 +524,21 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
   }
 
   .white {
-    width: 70%; /* 35% */
+    width: 70%; 
     height: 410px;
     align-items: center;
     display: flex;
   }
 
   .white img {
-    width: 400px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
     align-items: center;
   }
 
   .other-news {
     display: flex;
-    height: 4000px;
+    height: 100%;
   }
 
   .articles {
@@ -601,23 +547,27 @@ a.home-tablet, .politics1, .home-desktop, .politics, .sport, .culture {
     justify-content: center;
   }
 
-  .news-article img {
-    width: 1000px;
-    height: 500px;
+  .news-article {
+    width: 100%;
   }
 
-  .text {
-    font-size: 48px;
+  .news-article img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
+
+
 
   .rights {
     font-size: 54px;
     align-items: center;
-    width: 700px;
+    width: 150px;
   }
 
-  .footer {
-    height: 90px;
+  .rights {
+    font-size: 12px;
   }
  
 }
