--- a/code/style.css
+++ b/code/style.css
@@ -7,13 +7,30 @@ body {
 
   /*HEADER*/
 
-  .header {
+  header {
     display: flex;
-    justify-content: right;
-    align-items: flex-end;
-    width: 100%;
+    justify-content: flex-end;
+    width: 95%;
   }
 
+  .hamburger {
+    display: flex;
+    width: 30px;
+    height: 30px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    
+    margin-top: 10px;
+    
+  }
+  
+  .hamburger div {
+    width: 30px;
+    height: 1px;
+    background: black;
+    border-radius: 2px;
+    margin-right: 150px;
+  }
 
   .navbar {
     display: none;
@@ -30,13 +47,13 @@ body {
     width: 10%;
     height: auto;
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 5px;
   }
 
   h1 {
     font-family: 'Tangerine', cursive;
     color: #2c282b;
-    font-size: 50px;
+    font-size: 70px;
     text-shadow: 2px 2px #d6c6d1;
     font-weight: 300;
     margin: 25px 30px;
@@ -175,39 +192,46 @@ body {
 
 
 
-  @media (min-width: 769px) {
+  @media (min-width: 768px) {
 
   header {
     display: flex;
     justify-content: flex-end;
+    width: 95%;
+  }
+
+  .hamburger {
+    display: none;
+  }
+
+  .hamburger div {
+    display: none;
   }
 
   .navbar {
     display: flex; 
-    margin: 10px 40px 0px 0px;
+    margin: 10px 0px 0px 0px;
   }
 
   .nav-link {
     font-family: 'Tangerine', cursive;
     color: #000000;
-    font-size: 30px;
+    font-size: 25px;
     margin: 20px 14px 0px 0px;
     text-decoration: none;
   }
-
-
 
   
  .logo {
     width: 8%;
     height: auto;
-    margin-left: 40px;
+    margin-left: 25px;
   }
 
   h1 {
     font-family: 'Tangerine', cursive;
     color: #2c282b;
-    font-size: 120px;
+    font-size: 100px;
     text-shadow: 2px 2px #d6c6d1;
     font-weight: 300;
   }
@@ -228,19 +252,18 @@ body {
   }
 
 
-
   .other-news-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     color: #f8f5f7;
     border: 1px;
-    height: 80%;
-    width: auto;
+    width: 95%;
+    height: auto;
     margin-bottom: 10%;
     margin-left: 2%;
     margin-right: 2%;
-    padding-left: 28px;
+    padding-left: 20px;
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -275,8 +298,6 @@ body {
     padding-bottom: 8%;
   }
 
-
-
   hr {
     width: 80%;
     justify-content: center;
@@ -295,45 +316,61 @@ body {
 }
 
 
-@media (min-width: 1100px) {
+@media (min-width: 992px) {
 
-.navbar {
-  margin-right: 75px;
-}  
+
+.hamburger {
+  display: none;
+}
+
+.hamburger div {
+  display: none;
+}
+
+ 
 
 
 .nav-link {
-  font-size: 40px;
+  font-size: 35px;
   
 }
 
 
 .logo {
   width: 7%;
-  margin-left: 44px;
+  margin-left: 40px;
 }
 
 h1 {
-  font-size: 140px;
+  font-size: 110px;
+}
+
+.logo-h1 {
+  width: 95%;
 }
 
 .other-news-container {
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
   margin-right: 40px;
   margin-left: 40px;
 }  
 
 .other-news-box {
   width: 18%;
-  margin-top: 50px;
+  margin-top: 30px;
   padding-top: 12px;
   padding-right: 12px;
   padding-left: 12px;
 }
 
 #other-news-extract {
-  font-size: 20px;
+  font-size: 22px;
+}
+
+hr {
+  width: 70%;
 }
 
 footer {
