--- a/code/style.css
+++ b/code/style.css
@@ -1,11 +1,20 @@
 
+
+/* Global CSS variables used for colors */
+
+:root {
+  --primary: #f8f2f6;
+  --secondary: #ffffff;
+}
+
 body {
   margin: 0;
   background-color: #f8f2f6;
 }
 
 
-  /*HEADER*/
+
+  /* HEADER */
 
   header {
     display: flex;
@@ -15,13 +24,11 @@ body {
 
   .hamburger {
     display: flex;
-    width: 30px;
-    height: 30px;
     flex-direction: column;
     justify-content: space-evenly;
-    
-    margin-top: 10px;
-    
+    width: 30px;
+    height: 30px;
+    margin-top: 10px; 
   }
   
   .hamburger div {
@@ -29,25 +36,26 @@ body {
     height: 1px;
     background: black;
     border-radius: 2px;
-    margin-right: 150px;
   }
 
   .navbar {
     display: none;
   }
+  
 
 
-  .logo-h1 {
+  /* LOGO & H1 */
+
+  .logo-h1-container {
     display: flex;
     width: 100%;
-    border: 1px solid #f8f2f6;
+    border: 1px solid var (--primary);
   }
 
   .logo {
     width: 10%;
     height: auto;
-    margin-top: 10px;
-    margin-left: 5px;
+    margin: 10px, 0, 0, 5px;
   }
 
   h1 {
@@ -58,6 +66,9 @@ body {
     font-weight: 300;
     margin: 25px 30px;
   }
+
+
+  /* BIG NEWS SECTION */
 
   .big-news-container {
     display: flex;
@@ -116,10 +127,12 @@ body {
     text-decoration: underline;
   }
 
+
+  /*OTHER NEWS SECTION*/
+
   .other-news-container {
     display: flex;
     flex-direction: column;
-    color: #f8f5f7;
     border: 1px;
     height: 100%;
     width: auto;
@@ -173,10 +186,16 @@ body {
     text-decoration: underline;
   }
 
+
+  /* HR */
+
   hr {
     width: 80%;
     justify-content: center;
   }
+
+
+  /*FOOTER*/
 
   footer {
     font-family: 'Tangerine', cursive;
@@ -220,6 +239,22 @@ body {
     margin: 20px 14px 0px 0px;
     text-decoration: none;
   }
+
+
+  .nav-link a:link {
+    color: #000000;
+    text-decoration: none;
+  }
+
+  .nav-link a:visited {
+    color: #5e5a5a;
+  }
+
+  .nav-link a:hover {
+    color: rgb(243, 204, 230);
+    text-decoration: underline;
+  }
+
 
   
  .logo {
@@ -335,6 +370,19 @@ body {
   
 }
 
+.nav-link a:link {
+  color: #000000;
+  text-decoration: none;
+}
+
+.nav-link a:visited {
+  color: #5e5a5a;
+}
+
+.nav-link a:hover {
+  color: rgb(243, 204, 230);
+  text-decoration: underline;
+}
 
 .logo {
   width: 7%;
