--- a/code/assets/css/home.css
+++ b/code/assets/css/home.css
@@ -11,7 +11,7 @@
     }
     .main {
         flex: 7;
-        background: orangered;
+        background: red;
     }
     .aside{
         flex: 3;
